# multi-llm

./: .gitignore  README.md  pyproject.toml
multi_llm/: __init__.py  config.py  exceptions.py  factory.py  gateway.py  types.py
multi_llm/providers/: __init__.py  anthropic.py  base.py  gemini.py  groq.py  openai_compatible.py  openrouter.py
tests/: test_anthropic_provider.py  test_factory.py  test_gateway.py  test_gemini_provider.py  test_groq_provider.py  test_openai_provider.py  test_openrouter_provider.py
